syntax = "proto3";

package taxonomy.model;
import "core.proto";
import "artifact.proto";
option csharp_namespace = "TTI.TTF.Taxonomy.Model";
option java_package = "org.tti.ttf.taxonomy.model";
option java_multiple_files = true;

//each collection defined in a map with the index being the symbol of the artifact for the collection.
message Taxonomy{
    TaxonomyVersion version = 1;
    map<string, taxonomy.model.core.Base> base_token_types = 2;
    map<string, taxonomy.model.core.Behavior> behaviors = 3;
    map<string, taxonomy.model.core.BehaviorGroup> behavior_groups = 4;
    map<string, taxonomy.model.core.PropertySet> property_sets = 5;
    map<string, taxonomy.model.core.TemplateFormula> template_formulas = 6;
    map<string, taxonomy.model.core.TemplateDefinition> template_definitions = 7;
    Hierarchy token_template_hierarchy = 8;
    taxonomy.model.artifact.FormulaGrammar formula_grammar = 9;
}

message TaxonomyVersion{
    string id = 1;
    string version = 2;
    string state_hash = 3;
}

message Hierarchy {
    FungibleBranch fungibles = 1;
    NonFungibleBranch non_fungibles = 2;
    HybridBranch hybrids = 3;
}

message HybridBranch{
    FungibleBranch fungible = 1;
    NonFungibleBranch non_fungible = 2;
}

message FungibleBranch{
    BranchRoot fractional = 1;
    BranchRoot whole = 2;
}

message NonFungibleBranch{
    BranchRoot fractional = 1;
    BranchRoot whole = 2;
    BranchRoot singleton = 3;
}

message BranchIdentifier{
    taxonomy.model.artifact.Classification classification = 1;
    string formula_id = 2;
}

message BranchRoot{
    BranchIdentifier branch_identifier = 1;
    string parent_formula_id = 2;
    string name = 3;
    taxonomy.model.core.TemplateFormula branch_formula = 4;
    taxonomy.model.core.TokenTemplates templates = 5;
    repeated BranchRoot branches = 6;
}

